--- a/assets/css/_nav.scss
+++ b/assets/css/_nav.scss
@@ -1,14 +1,21 @@
 .m-nav--wide {
   display: grid;
   gap: 0;
-  grid-template-columns: max-content 1fr;
+  grid-template-columns: max-content minmax(0, 1fr);
   grid-template-rows: 1fr;
+  grid-template-areas: "left content";
   width: 100%;
   height: 100%;
 }
 
 .m-nav__nav-bar {
   z-index: 700;
-  justify-self: stretch;
-  align-self: stretch;
+}
+
+.m-nav__nav-bar--left {
+  grid-area: left;
+}
+
+.m-nav__app-content {
+  grid-area: content;
 }
